kube/prod/impc-solr-documentation-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: impc-solr-documentation
  name: impc-solr-documentation
  namespace: mi-pa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: impc-solr-documentation
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: impc-solr-documentation
    spec:
      imagePullSecrets:
        - name: impcapiregistrycredentialsallele
        - name: alpineregistrycredentials
      volumes:
        - name: tomcatlog
          emptyDir: {}
      containers:
        - image: dockerhub.ebi.ac.uk/mouse-informatics/impc-solr-documentation:latest
          imagePullPolicy: Always
          name: impc-solr-documentation
          ports:
            - containerPort: 8091
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8091
            initialDelaySeconds: 120
            periodSeconds: 60
          resources: {}
          volumeMounts:
            - name: tomcatlog
              mountPath: /tomcat/logs
        - image: dockerhub.ebi.ac.uk/mouse-informatics/alpine:latest
          imagePullPolicy: Always
          name: api-accesslog
          args: [/bin/sh, -c, 'tail -n+1 -f /tomcat/logs/access_log.log']
          readinessProbe:
            exec:
              command:
                - ls
                - /tomcat/logs/access_log.log
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - name: tomcatlog
              mountPath: /tomcat/logs
