kube/prod/impc-solr-documentation-node-port-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: impc-solr-documentation-service
  namespace: mi-pa
  labels:
    name: impc-solr-documentation-service
spec:
  ports:
    - protocol: TCP
      port: 8091
      nodePort: 31532
  selector:
    app: impc-solr-documentation
  type: NodePort
