kube/prod/impc-solr-documentation-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: impc-solr-documentation
  namespace: mi-pa
  labels:
    name: impc-solr-documentation
spec:
  ports:
    - protocol: TCP
      port: 8080
  selector:
    app: impc-solr-documentation
  type: ClusterIP
